# rust-template

./: Cargo.toml  README.md
.github/workflows/: ci.yml
